more button alignment fixes

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -3216,6 +3216,27 @@ screen and (max-height: 300px) {
 		padding: 12px 15px;
 		font-size: 12px;
 	}
+
+	/* added for new button settings for 5.7 */
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-50:last-child,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-25:last-child,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-25,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-50 {
+		width: calc(50% - .4em);
+		max-width: calc(50% - .4em);
+		margin-right: 0;
+		margin: 0 .2em .4em .2em;
+	}
+
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-75:last-child,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-100:last-child,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-75,
+	.wp-block-buttons>.wp-block-button.wp-block-button__width-100 {
+		width: calc(100% - .4em);
+		max-width: calc(100% - .4em);
+		margin-right: 0;
+		margin: 0 .2em .4em .2em;
+	}
 }
 
 .wp-block-button__link:focus,
